# jade

./: .gitmodules  CMakeLists.txt  README.md  jade-header.psd
examples/: CMakeLists.txt  bare_minimum.cpp  colors.cpp  config.cpp  drawing.cpp  input.cpp  raindrop_catch.cpp
include/jade/: camera.h  defs.h  font.h  internal.h  sprite.h
src/: CMakeLists.txt  camera.cpp  camera.h  color.h  core.cpp  core.h  defs.h  drawable.cpp  drawable.h  font.cpp  font.h  hello.cpp  hello.h  internal.cpp  internal.h  jade.cpp  jade.h  mesh.cpp  mesh.h  prelude.h  shader.cpp  shader.h  shape.cpp  shape.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  window.cpp  window.h
test/: CMakeLists.txt  main.cpp
